--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/rluapm/rlupmbs#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
@@ -29,6 +30,7 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express-session": "^1.17.4"
   }
 }
