--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for lupm.xyz",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts --config nodemon.json"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,14 @@
   "homepage": "https://github.com/rluapm/rlupmbs#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/js-search": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
+    "js-search": "^2.0.0",
     "node-json-db": "^1.4.1",
+    "porter-stemmer": "^0.9.1",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
