--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rlupmbs",
   "version": "1.0.0",
   "description": "Backend for lupm.xyz",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon src/index.ts --config nodemon.json"
   },
@@ -27,9 +27,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
-    "js-search": "^2.0.0",
     "node-json-db": "^1.4.1",
-    "porter-stemmer": "^0.9.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
