--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "helmet": "^4.6.0",
     "node-json-db": "^1.4.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.5.4",
     "@types/cookie-parser": "^1.4.2",
     "@types/express-session": "^1.17.4"
   }
